# resume

./: README.md
ai & ml/n-queens/: four.py  three.py
ai & ml/perceptron/: Project 2 Classification.ipynb  nagherpe Project 2 Classification.ipynb  perceptron.py
ai & ml/search agents/: grading.py  search.py  searchAgents.py
dsa/sorting/: tests.py
embedded/serial communication/: capstone.c  capstone_final.c
hash tables/: solution.py  specs.md  tests.py
linked lists/doubly/: specs.md  tests.py
linked lists/singly/: specs.md
n-queens/: four.py  nxn.py  three.py
networks/http web server/: client.py  client_multi.py  helloworld.html  webserver.py  webserver_multi.py
networks/icmp pinger/: icmp_pinger.py
networks/smtp mail client/: mail.py
oop/animation/: Project2UML.vpp
oop/animation/IncredibleMachines/MachineLib/: Body.cpp  Body.h  CMakeLists.txt  Component.cpp  Component.h  ConcreteMachineSystem.cpp  ConcreteMachineSystem.h  Conveyor.cpp  Conveyor.h  Goal.cpp  Goal.h  Hamster.cpp  Hamster.h  HamsterAndConveyorFactory.cpp  IRotationSink.cpp  IRotationSink.h  Machine.cpp  Machine.h  MachineCFactory.cpp  MachineCFactory.h  MachineFactory1.cpp  MachineFactory1.h  MachineFactory2.cpp  MachineFactory2.h  MachineSystemFactory.cpp  Pulley.cpp  Pulley.h  RotationSink.cpp  RotationSink.h  RotationSource.cpp  RotationSource.h  ScoreBoard.cpp  ScoreBoard.h
oop/sparty sudoku/: main.cpp  pch.h
oop/sudoku solver/: sudoku.cpp  sudoku.hpp
pacman search/: autograder.py  searchTestClasses.py  submission_autograder.py
perceptron/: about.txt
sorting/: solution.py  specs.md  tests.py
sorting/img/: sorting_comparison.png:Zone.Identifier
sparty sudoku game/: SudokuApp.cpp  SudokuApp.h
sparty sudoku game/Levels/: level1.xml
sparty sudoku game/SudokuLib/: ContainerVisitor.cpp  ContainerVisitor.h  DeclarationContainer.cpp  DeclarationContainer.h  DeclarationDigit.cpp  DeclarationEnemy.cpp  DeclarationEnemy.h  DeclarationSparty.cpp  DeclarationSparty.h  DeclarationXRay.cpp  DigitResetVisitor.cpp  Item.cpp  (+26 more)
sudoku solver/: a.out  sudoku.cpp  sudoku.hpp
(+291 files in other folders)
